--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -660,6 +660,16 @@ input, textarea{
     border: none;
 }
 
+input, #date{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: none;
+    color: rgb(112, 111, 111);
+}
+
 textarea{
     min-height: 100px;
     max-height: 200px;
