--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -938,7 +938,22 @@ textarea{
     font-family: 'Open Sans', sans-serif;
 }
 
+.rss{
+    margin-top: 150%;
+    position: relative;
+    width: 50%;
+    height: 40%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
 
+.rss img{
+    width: auto;
+    height: auto;
+    max-width: 90px;
+    max-height: 90px;
+}
 
 
 
